--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "clsx": "^2.1.1",
+    "idb-keyval": "^6.2.2",
+    "immer": "^10.1.3",
     "lucide-react": "^0.542.0",
     "radix-ui": "^1.4.3",
+    "rc-virtual-list": "^3.19.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "zustand": "^5.0.8"
