--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,6 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
@@ -24,6 +23,7 @@
       "@contexts/*": ["./src/contexts/*"],
       "@components/*": ["./src/components/*"],
       "@stores/*": ["./src/stores/*"],
+      "@services/*": ["./src/services/*"],
       "@utils/*": ["./src/utils/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@layout/*": ["./src/layout/*"],
