--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.87.1",
     "clsx": "^2.1.1",
     "idb-keyval": "^6.2.2",
     "immer": "^10.1.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
     "radix-ui": "^1.4.3",
     "rc-virtual-list": "^3.19.1",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
